# alfred-quick-emoji-workflow

./: .gitignore  .tasks  LICENSE  Makefile  README.md  info.plist  pyproject.toml  requirements.txt
src/: alfred.py  install_icons.py  main.py  requirements.txt  variables.py
src/config/: emoji.json
